--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
       "@models/*": ["models/*"],
       "@routes/*": ["routes/*"],
       "@services/*": ["services/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@socket/*": ["socket/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.json", ".env"],
